# thesis

./: .gitignore  README.md  data_exploration.ipynb  download_videos.sh  pyproject.toml  split.py
GSViT/: dataloader_surgical.py  gsvit_pretrain_job.sh  main.py  pretrain_model.py  pyproject.toml  slurm.cerulean.44347.err  slurm.cerulean.44347.out
GSViT/EfficientViT/classification/model/: build.py  efficientvit.py
le-wm/: check_gpu.py  dataset_surgical.py  environment.json  environment_v1.json  environment_v2.json  environment_v3.json  environment_v4.json  environment_v5.json  environment_v6.json  environment_v7.json  environment_v8.json  environment_v9.json  eval.py  extract_frames.py  jepa.py  jepa_pretrain_job.sh  module.py  probe.py  pyproject.toml  requirements_frozen_v4.txt  slurm.cerulean.44775.err  slurm.cerulean.44775.out  train.py
le-wm/config/eval/: cholec80.yaml
le-wm/config/train/: lewm_surgical.yaml
le-wm/config/train/data/: surgical.yaml
le-wm/outputs/2026-04-04/18-08-14/.hydra/: config.yaml  hydra.yaml
le-wm/outputs/2026-04-11/14-13-05/.hydra/: config.yaml  hydra.yaml
le-wm/outputs/2026-04-11/14-16-40/.hydra/: hydra.yaml
le-wm/outputs/2026-04-11/14-19-59/.hydra/: config.yaml  hydra.yaml
le-wm/outputs/2026-04-11/15-54-32/.hydra/: hydra.yaml
le-wm/outputs/2026-04-11/16-36-49/.hydra/: hydra.yaml
le-wm/outputs/2026-04-11/17-02-13/.hydra/: hydra.yaml
le-wm/outputs/2026-04-11/17-03-26/.hydra/: config.yaml  hydra.yaml
le-wm/wandb/: latest-run
le-wm/wandb/run-20260404_180817-lwckof97/: run-lwckof97.wandb
(+17 files in other folders)
