[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "hachoir>=3.3.0",
    "hydra-core>=1.3.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "stable-worldmodel>=0.0.6",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "wandb>=0.25.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
