[project]
name = "le-wm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.2",
    "hydra-core>=1.3.2",
    "lightning>=2.6.1",
    "opencv-python>=4.13.0.92",
    "stable-pretraining>=0.1.6",
    "stable-worldmodel>=0.0.6",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
